--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Oxomo Woman 
 header-img: img/home-bg.png
 email: ameecova@yahoo.com
 copyright_name: Acova003
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Changing the ratio one line of code at a time 
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Acova003
